--- a/src/styles/Email.module.css
+++ b/src/styles/Email.module.css
@@ -8,12 +8,13 @@
 }
 
 .profile_img{
-    @apply border-4 border-gray-100 w-[135px] rounded-full shadow-lg cursor-pointer;
-    @apply hover:border-gray-200;
+    @apply border-4 border-gray-100 w-[135px] rounded-full shadow-lg cursor-text;
+    /* @apply hover:border-gray-200; */
 }
 
 .textbox{
-    @apply border-0 px-5 py-4 rounded-xl w-3/4 shadow-sm text-lg;
+    border-width: 1px;
+    @apply border-gray-300 px-5 py-4 rounded-xl w-3/4 shadow-sm text-lg bg-gray-200;
     @apply focus:outline-none;
 }
 
