--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -18,11 +18,21 @@
     @apply focus:outline-none;
 }
 
+.textbox_full{
+    border-width: 1px;
+    @apply border-gray-300 px-5 py-4 rounded-xl shadow-sm text-lg bg-gray-200;
+    @apply focus:outline-none;
+}
+
 .btn{
     @apply border bg-indigo-500 w-3/4 py-4 rounded-lg text-gray-50 text-xl shadow-sm text-center;
 }
 
-.btn:hover{
+.btn_inline_width{
+    @apply border bg-indigo-500 p-4 rounded-lg text-gray-50 text-xl shadow-sm text-center;
+}
+
+.btn:hover .btn_inline_width:hover{
     background-color: #ff6a6a; 
 }
 
